main single page ajax app

--- a/ethnode/webdoc/index.css
+++ b/ethnode/webdoc/index.css
@@ -134,6 +134,11 @@ div.inner-content {
     /*max-width: 1024px; */
 }
 
+a.color_orange {
+
+background-color #FFB266;
+}
+
 
 
 div.listing-item-box {
