--- a/ethnode/webdoc/topnav.css
+++ b/ethnode/webdoc/topnav.css
@@ -47,6 +47,8 @@ a.round-button:hover {
     color: white;
 }
 
+
+
 a.topnav {
 
     font-family: 'Khand', sans-serif;
@@ -95,4 +97,29 @@ a.topnav-button:hover {
     background-color: green;
 }
 
+
+a.topnav-button-orange {
+
+    font-family: 'Khand', sans-serif;
+    font-size: 18px;
+
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+
+    color: gray;
+    /*height: 24px;*/
+    border-color #FFB266;
+
+    border-color: green;
+    text-decoration: none;
+    padding-left: 4px;
+    padding-right: 4px;
+
+}
+
+a.topnav-button-orange:hover {
+    color: white;
+    background-color: #FFB266;
+}
 
