add excelent vis.js

--- a/ethnode/webdoc/index.css
+++ b/ethnode/webdoc/index.css
@@ -188,3 +188,10 @@ div.item-content {
 p.align_left{
     text-align: left;
 }
+
+/* test vis.js */
+ #mynetwork {
+      width: 600px;
+      height: 600px;
+      border: 1px solid lightgray;
+    }
