--- a/ethnode/webdoc/index.css
+++ b/ethnode/webdoc/index.css
@@ -26,7 +26,7 @@ div.margin_left_10px {
 div.border_left_1px {
 
     border-left-style: solid;
-    border-left-size: 1px;
+    border-left-width: 1px;
     border-color: gray;
 }
 
@@ -218,7 +218,8 @@ p.align_left{
 
 /* test vis.js */
  #mynetwork {
-      width: 600px;
-      height: 600px;
-      border: 1px solid lightgray;
+      /*height: 466px;*/
+      height:436px;
+       width: 1000px;
+       
     }
