--- a/ethnode/webdoc/profile.css
+++ b/ethnode/webdoc/profile.css
@@ -13,24 +13,37 @@ div.avatar{
 
 a.skill_box:hover {
    
-    
- 
+      background-color:#ff9900;
+
+
+    border-width: 1px;
+      border-radius:16px;
+      color:  #ffffff;
+
+    background-color:#ff9900;
+    text-decoration: none;
+
 }
 
 
 
 a.skill_box {
     font-family: 'Open Sans';
+     color:  #ff9900;
 
+    border-color:   #ff9900;
+    border-style: solid;
+    background-color:#fbfbfb;
     display: inline-block;
     /*font-size: 1px;*/
 
-    /* border-style: solid;
-    
-    border-width: 1px; */
+    border-style: solid;
+    border-color:  #ff9900;
+    border-width: 1px;
 
-    border-radius:6px;
-    color: darkslategray;
+    border-radius:16px;
+
+
   
     float: left;
     margin-left: 6px;
@@ -39,16 +52,9 @@ a.skill_box {
     padding-bottom: 4px; 
     padding-left: 6px;
     padding-right: 6px; 
-    
-    background-color:rgb(90, 131, 143);
-    color: white;
+
     text-decoration: none;
-    /*padding: 2px;*/
-    
-    /* padding-left: 4px;
-    padding-right: 4px; */
-   
-   
+
 
 }
 
