--- a/ethnode/webdoc/topnav.css
+++ b/ethnode/webdoc/topnav.css
@@ -98,6 +98,7 @@ a.topnav-button:hover {
 }
 
 
+
 a.topnav-button-orange {
 
     font-family: 'Khand', sans-serif;
@@ -110,9 +111,7 @@ a.topnav-button-orange {
     color: gray;
     /*height: 24px;*/
 
-    border-color: #FFB266;
-
-    border-color: green;
+    border-color: orange;
     text-decoration: none;
     padding-left: 4px;
     padding-right: 4px;
@@ -121,6 +120,8 @@ a.topnav-button-orange {
 
 a.topnav-button-orange:hover {
     color: white;
-    background-color: #FFB266;
+    background-color: orange;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
 }
-
