Added JSON, made everything load from a profile.json

--- a/ethnode/webui/mixins/profile-card.jade
+++ b/ethnode/webui/mixins/profile-card.jade
@@ -2,14 +2,13 @@
 .profile-upper
 
     .profile-image(data-toggle="modal", data-target="#avatarModal")
-        img(src="images/profilepicture.png", alt="Sharad Venkat")
+        img(src="images/dobri.png", alt="Dobri Stoilov")
         .text-on-image: p Change
 
-    h2 Sharad Venkat
-
-    h5.profile-information-position Founder at <strong>Aspire</strong>
-
-    p Oakland, CA
+    //- h2 Dobri Stoilov
+    //- h5.profile-information-position Founder at <strong>Ethearnal</strong>
+    //- p Sofia, Bulgaria
+    // Now... JSON data goes here. :(
 
     button.light-blue-background.hidden Connect
     button.orange-background Accept
@@ -17,7 +16,7 @@
 
 // Profile description including a description about you. (dark-gray section)
 .profile-description
-    p I like to bring ideas to life. <br />Risk-taker 'til the day I die. <br />Never stop writing the story of your life.
+    // JSON data goes here.
 
 // Profile top skills and tools
 .profile-bottom
@@ -25,10 +24,7 @@
     i.material-icons keyboard_arrow_down
 
     .skills
-        p program management <span class="experience">3y</span>
-        p.tool excel <span class="experience">5y</span>
-        p.hidden.more program management <span class="experience">3y</span>
-        p.hidden.more.tool excel <span class="experience">5y</span>
+        // JSON data goes here.
 
 // Profile footer, including social media links.
 .profile-footer
