--- a/ethnode/webui/styles/header.sass
+++ b/ethnode/webui/styles/header.sass
@@ -145,8 +145,8 @@ header .container nav
 
                     .round-number
                         background-color: #ffb230
-                        height: 17px
-                        width: 17px
+                        // height: 17px
+                        // width: 100%
                         text-align: center
                         display: table
                         border-radius: 100%
@@ -159,6 +159,7 @@ header .container nav
                         span
                             color: white
                             font-size: 10px
+                            padding: 0 5px
                             line-height: 17px
                             font-weight: 500
                             display: table-cell
