--- a/ethnode/webui/index.jade
+++ b/ethnode/webui/index.jade
@@ -74,7 +74,7 @@ html(lang='en-US')
 
                         .form-group.visible-xs
                             a(href=""): i.icon-search
-                            input.form-control(text="text", placeholder="Search Aspire")
+                            input.form-control(text="text", placeholder="Search Ethearnal")
 
                         .button
                             button(type='button', class='navbar-toggle collapsed', data-toggle='collapse', data-target="#navigation", aria-expanded="false")
@@ -84,16 +84,7 @@ html(lang='en-US')
                                 span
 
 
-                        a.navbar-brand(href='').hidden-xs
-                            svg(xmlns='http://www.w3.org/2000/svg', width='101', height='24', viewbox='0 0 101 24')
-                              style.
-                                .a{fill:none;}
-                              title Aspire
-                              g.a
-                                path(d='M43.1 3L40.1 3 34.1 19 36.9 19 38.4 15 44.8 15 46.2 19 49.1 19 43.1 3ZM44 12.7L39.2 12.7 41.6 5.9 41.6 5.9 44 12.7ZM55.2 17.2C53.5 17.2 52.3 16.6 52.2 15.4L49.7 15.4C49.7 18.2 52 19.3 55.1 19.3 58.5 19.3 60.3 18.1 60.3 15.7L60.3 15.7C60.3 13.2 58.8 12.4 56 12L54.9 11.9C53.3 11.7 52.5 11.3 52.5 10.4L52.5 10.4C52.5 9.7 53.2 9 55 9 56.6 9 57.4 9.4 57.5 10.5L60.1 10.5C59.9 8 58.1 7 55 7 51.7 7 50 8.2 50 10.4L50 10.5C50 12.9 51.6 13.7 54.3 14L55.5 14.2C57 14.3 57.7 14.7 57.7 15.6L57.7 15.7C57.7 16.7 56.9 17.2 55.2 17.2L55.2 17.2ZM65.1 17.3C65.7 18.3 67 19.2 69.2 19.2 72.4 19.2 74.3 17.1 74.3 13.1L74.3 13.1C74.3 9.3 72.5 7 69.2 7 67 7 65.6 8.1 65.1 9L65.1 9 65 7.3 62.5 7.3 62.5 22.9 65.1 22.9 65.1 17.3 65.1 17.3ZM65.1 12.3C65.1 10.4 66.5 9.1 68.5 9.1 70.8 9.1 71.6 10.5 71.6 13.1L71.6 13.1C71.6 15.7 70.8 17.1 68.5 17.1 66.4 17.1 65.2 15.9 65.1 14.2 65.1 13.8 65.1 13.5 65.1 13.2L65.1 12.3ZM76.5 19L79.1 19 79.1 7.3 76.5 7.3 76.5 19ZM76.5 5.5L79.2 5.5 79.2 3 76.5 3 76.5 5.5ZM81.9 19L84.5 19 84.5 13.2C84.5 10.7 85.7 9.6 88.6 9.6L88.6 7C86.2 6.9 84.9 8.2 84.6 9.4L84.5 9.4 84.5 7.3 81.9 7.3 81.9 19ZM96.4 17.1C93.5 17.1 92.4 16.2 92.3 14.1L100.8 14.1C100.9 13.6 100.9 13.1 100.9 12.5 100.9 9.3 99.5 7 95.6 7 91.7 7 89.7 9.2 89.7 13.1L89.7 13.1C89.7 17.1 91.6 19.3 96.2 19.3 97.7 19.3 99.1 19 100.3 18.5L100.3 16.4C98.9 16.9 97.7 17.1 96.4 17.1L96.4 17.1ZM95.6 9C97.7 9 98.4 10.1 98.4 12.2L92.3 12.2C92.4 10.1 93.4 9 95.6 9L95.6 9Z', fill='#5E6977')
-                                path(d='M13.8 12.9C13.6 12.8 13.3 12.8 13.1 12.9L8.5 17 0.8 23.8C0.4 24.1-0.2 23.7 0.1 23.2L6 12.7 7.3 10.5 8.2 8.8C8.5 8.6 8.9 8.6 9.1 8.8L13.8 12.9ZM26.1 23.8L15.5 14.4 13.8 12.9 9.1 8.8C8.9 8.6 8.5 8.6 8.2 8.8L8.4 8.5 8.5 8.3 13 0.4C13 0.4 13 0.4 13 0.4L13 0.3C13.1 0.2 13.3 0.1 13.5 0.1 13.6 0.1 13.8 0.2 13.9 0.3L13.9 0.4C13.9 0.4 13.9 0.4 13.9 0.4L18.4 8.3 18.5 8.5 19.7 10.5 20.9 12.7 26.9 23.2C27.1 23.7 26.5 24.1 26.1 23.8Z', fill='#127FFF')
-                                path(d='M13.9 12.9C13.7 12.8 13.4 12.8 13.2 12.9L8.6 17 0.8 23.8C0.4 24.1-0.2 23.7 0.1 23.2L6.1 12.6 7.3 10.5 8.3 8.8C8.5 8.6 8.9 8.6 9.2 8.8L13.9 12.9Z', style='fill-opacity:0.5;fill:#FFF;mix-blend-mode:overlay')
-                                path.a(d='M26.1 23.8L15.4 14.4 13.8 12.9 9.1 8.8C8.8 8.6 8.4 8.6 8.2 8.8L8.4 8.5 8.5 8.3 12.9 0.4C12.9 0.4 13 0.4 13 0.4L13 0.3C13.1 0.2 13.3 0.1 13.4 0.1 13.6 0.1 13.8 0.2 13.9 0.3L13.9 0.4C13.9 0.4 13.9 0.4 13.9 0.4L18.4 8.3 18.5 8.5 19.6 10.5 20.9 12.7 26.9 23.2C27.1 23.7 26.5 24.1 26.1 23.8')
+                        a.navbar-brand(href='').hidden-xs Ethearnal BETA
 
                     // Navbar items ONLY for larger than mobile screens.
                     .collapse.navbar-collapse#navigation
@@ -101,7 +92,7 @@ html(lang='en-US')
                         form.navbar-form.navbar-left
                             .form-group
                                 a(href=""): i.icon-search
-                                input.form-control(text="text", placeholder="Search Aspire")
+                                input.form-control(text="text", placeholder="Search Ethearnal")
 
                         ul.nav.navbar-nav.navbar-right.hidden-xs
                             li.asset#comment-navbar
@@ -112,13 +103,13 @@ html(lang='en-US')
 
                             li.asset#alert-navbar
                                 a(href="")
-                                    i.icon-bell
+                                    i.material-icons polymer
                                     .round-number
                                         span 3
 
                             li.profile(data-toggle="dropdown")
-                                img.profile-picture(src="images/profilepicture.png", alt="Sharad")
-                                span Sharad
+                                img.profile-picture(src="images/dobri.png", alt="Dobri")
+                                span Dobri
 
                             ul.dropdown-menu(aria-labelledby="dLabel")
                                 li.settings
@@ -131,8 +122,8 @@ html(lang='en-US')
 
                         ul.nav.navbar-nav.visible-xs
                             li
-                                a(href="") Sharad
-                                    img.profile-picture(src="images/profilepicture.png", alt="Sharad")
+                                a(href="") Dobri
+                                    img.profile-picture(src="images/dobri.png", alt="Dobri")
                             li
                                 a(href='#') Messages
                                     .round-number
